snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.130037-1.module.sha256
20eb33bdf9067a580c2580f48c31664ec84eb81304eec67bb60599425b9d8c01